@@ -7,17 +7,16 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ListTypeServiceImpl implements ListTypeService {
-    private final ListTypeRepository ListTypeRepository;
+    private final ListTypeRepository listTypeRepository;
 
     @Override
     public List<ListTypeDto> getAllListTypes() {
-        return ListTypeRepository.findAllListTypes().stream()
+        return listTypeRepository.findAllListTypes().stream()
                 .map(ListTypeDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
